[gd_scene load_steps=14 format=2]

[ext_resource path="res://Barrel/Barrel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/Main Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/World.gd" type="Script" id=3]
[ext_resource path="res://Shaders/water.shader" type="Shader" id=4]
[ext_resource path="res://Sounds/waves.wav" type="AudioStream" id=5]
[ext_resource path="res://Menus/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="Environment" id=1]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 250, 250 )
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="OpenSimplexNoise" id=6]

[sub_resource type="NoiseTexture" id=7]
noise = SubResource( 6 )

[sub_resource type="OpenSimplexNoise" id=8]

[sub_resource type="NoiseTexture" id=9]
noise = SubResource( 8 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )
shader_param/speed = 0.005
shader_param/color = Color( 0.258824, 0.443137, 0.411765, 1 )
shader_param/strengh = Vector2( 0.5, 0.25 )
shader_param/frequency = Vector2( 12, 12 )
shader_param/time_scale = Vector2( 1, 2 )
shader_param/noise1 = SubResource( 7 )
shader_param/noise2 = SubResource( 9 )

[node name="Word" type="Node"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0 )
shadow_enabled = true
directional_shadow_mode = 0

[node name="Water" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 20 )

[node name="Barrel" parent="." instance=ExtResource( 1 )]
fire_rate = 10.0

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -24.0
pitch_scale = 0.75
autoplay = true

[node name="HUD" parent="." instance=ExtResource( 6 )]
pause_mode = 2

[node name="Main Menu" parent="." instance=ExtResource( 2 )]
pause_mode = 2

[connection signal="restart" from="." to="Barrel" method="_on_Word_restart"]
[connection signal="restart" from="." to="HUD" method="_on_Word_restart"]
[connection signal="damaged" from="Barrel" to="HUD" method="_on_Barrel_damaged"]
[connection signal="dead" from="Barrel" to="Main Menu" method="_on_Barrel_dead"]
[connection signal="ex_up" from="Barrel" to="HUD" method="_on_Barrel_ex_up"]
[connection signal="level_up" from="Barrel" to="HUD" method="_on_Barrel_level_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="up_fire_rate" from="HUD" to="Barrel" method="_on_HUD_up_fire_rate"]
[connection signal="up_projectile_amount" from="HUD" to="Barrel" method="_on_HUD_up_projectile_amount"]
[connection signal="up_range" from="HUD" to="Barrel" method="_on_HUD_up_range"]
[connection signal="start" from="Main Menu" to="." method="_on_Main_Menu_start"]
[connection signal="stop" from="Main Menu" to="." method="_on_Main_Menu_stop"]
